packages/astro/e2e/fixtures/errors/src/pages/solid-runtime-error.astro
---
import SolidRuntimeError from '../components/SolidRuntimeError.jsx';
---

<div>
  <SolidRuntimeError />
</div>
